# strange

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/content/: about.md  first-entry.md  second-entry.md  third-entry-is-a-draft.md
example/output/: index.html  layout.css  third-entry-is-a-draft.html
example/publish/: about.html  first-entry.html  index.html  second-entry.html
example/templates/: about_template.html  header_template.html  post_template.html  posts_template.html
strange/: main.py  serve.py
