[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strange-site"
version = "0.1.0"

dependencies = [
"click==8.1.7",
"Jinja2==3.1.4",
"Markdown==3.7",
"Pygments==2.18.0",
"watchfiles==0.24.0",
]

[project.scripts]
strange = "strange.main:cli"
